--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.68.3",
-    "next": "15.1.3",
+    "next": "^15.1.1-canary.25",
+    "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.29-canary.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sanity": "^3.68.3",
-    "styled-components": "^6.1.14"
+    "server-only": "^0.0.1",
+    "styled-components": "^6.1.14",
+    "uuid": "^11.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
